--- a/Papers/ICCC-2023/bibliography.bib
+++ b/Papers/ICCC-2023/bibliography.bib
@@ -405,6 +405,17 @@
   series    = {POPL '75}
 }
 
+@techreport{ISO:cpp98,
+  type        = {Standard},
+  key         = {ISO/IEC 14882:1998(E) },
+  month       = mar,
+  year        = {1998},
+  title       = {{Programming languages — C++}},
+  volume      = {1998},
+  address     = {Geneva, CH},
+  institution = {International Organization for Standardization}
+}
+
 @techreport{ISO:cpp20,
   type        = {Standard},
   key         = {ISO/IEC 14882:2020(E) },
