--- a/Papers/ICCC-2023/bibliography.bib
+++ b/Papers/ICCC-2023/bibliography.bib
@@ -192,6 +192,14 @@
   urldate = {2021-11-17}
 }
 
+@book{hejlsberg2003c,
+  title     = {C\# language specification},
+  author    = {Hejlsberg, Anders and Wiltamuth, Scott and Golde, Peter},
+  year      = {2003},
+  publisher = {Addison-Wesley Longman Publishing Co., Inc.}
+}
+
+
 @mastersthesis{csharp:reflection_cost,
   author = {Darovich, Andrew},
   school = {Cleveland State University },
