--- a/Papers/ICCC-2023/sections/abstract.tex
+++ b/Papers/ICCC-2023/sections/abstract.tex
@@ -1,10 +1,10 @@
 As static metaprogramming is becoming more relevant, compilers must adapt to acomodate them.
 This requires exposing more information about the code, from the compiler, to the programmer as well as more powerfull compile-time function execution capabilities.
-The interpreter component of a compiler therefore becomes more and more prominent.
+The interpreter component of a compiler therefore becomes more and more important.
 
 In this paper a new approach to compiler architecture that places the interpreter as the central component of the compiler.
 Translation of user code into the executable form is done using an interpreted module, written in the target language, and uses the same data structures accessible to the programmer.
-This boosts the flexibility and extensibility of the compiler and ensures the completness of the available metadata and the ability to execute any code at compile-time.
+This improves the flexibility and extensibility of the compiler and ensures the completness of the available metadata and the ability to execute any code at compile-time.
 
 Compile Time Function Execution (CTFE) First pattern is designed with compiling low-level, non-garbage-collected, reflection-enabled languages in mind.
 It was created in order to compile C-=-1, which aimed to allow the programmer to execute any code at compile time, as well as analyze and modify the program structure.
