--- a/Papers/ICCC-2023/sections/conclusions.tex
+++ b/Papers/ICCC-2023/sections/conclusions.tex
@@ -1,9 +1,9 @@
 \section{Conclusions}
 
-CTFE First approach to compiler construction offers high degree of compiler extensibility, at the cost of development time and performance.
+CTFE First approach to compiler construction offers high degree of compiler extensibility, at the cost of development time and performance, compared with conventional compilers.
 Since user code has access to the same information as the compiler at compile time, it may perform more advanced functions.
 The thesis that introduced this approach \cite{grabski2020} demonstrated numerous practical application: generating bindings for other languages, static analysis and extending semantics of the language.
-These these goals are significantly easier to accomplish, thanks to the access to semantic model of the program, constructed by the compiler.
+These goals are significantly easier to accomplish, thanks to the access to semantic model of the program, constructed by the compiler.
 Authors of language tools do not need to analyze the user program.
 
 On the other hand, implementing a compiler is more difficult.
