--- a/Papers/ICCC-2023/sections/realted-work.tex
+++ b/Papers/ICCC-2023/sections/realted-work.tex
@@ -4,7 +4,7 @@
 Many currently used programming languages allow the programmer to execute some code at compile time, including C\# \cite{csharp:source_generators,roslyn}, Rust \cite{rust, klabnik2019rust} and C++ \cite{ISO:cpp20}.
 
 Rust language compiler is the most similar in capability, to what was demonstrated with C-=-1, as a feature of CTFE First.
-It allows the user to write code that performs some transformations of the program, and interact with the evnoirment during the build process.
+It allows the user to write code that performs some transformations of the program, and interact with the envoirment during the build process.
 The two relevant features are build scripts and macros.
 
 Rust macros, much like the classic C-style preprocessor macros, generate additional code as text.
@@ -13,7 +13,7 @@ This mechanism is powerfull, allowing the user to rewrite code to avoid repetiti
 They are however unable to reflect on the program as a whole or obtain much of the information available to the compiler.
 
 Build scripts, on the other hand, are programs that execute prior to compilation of the main package.
-They preparing the envoirment for building the program by, for example, compiling its external dependencies.
+They prepare the envoirment for building the program by, for example, compiling its external dependencies.
 They do not have any information about the structure of the program being compiled.
-If a task, done by a build script, were to require such data, it would have to analyze the code by itself, without any help from the compiler.
+Build scripts that require such data, would have to analyze the code by itself, without any help from the compiler.
 This makes application such as automatically genertaing bindings for other programming languages significantly more difficult.
